--- a/.github/workflows/push-to-ecr.yml
+++ b/.github/workflows/push-to-ecr.yml
@@ -1,7 +1,7 @@
 - run: docker build -t traffik:latest .
-- name: Push to ECR
+  name: Push to ECR
   id: ecr
-  uses: jwalton/gh-ecr-push@v1
+  uses: jwalton/gh-ecr-push@v1.0.0
   with:
     access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
     secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
