--- a/.github/workflows/push-to-ecr.yml
+++ b/.github/workflows/push-to-ecr.yml
@@ -4,12 +4,13 @@ jobs:
     build-and-push:
       runs-on: ubuntu-latest
       steps:
+        - uses: actions/checkout@v1
         - uses: kciter/aws-ecr-action@master
           with:
             access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
             secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
             account_id: ${{ secrets.AWS_ACCOUNT_ID }}
-            repo: bhavika/traffik
+            repo: traffik
+            create_repo: true
             region: us-east-1
             tags: latest,${{ github.sha }}
-            create_repo: false
