--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ python:
   - "3.8"
 install:
   - pip install -r requirements.txt
-  - pip install .[test]
+  - pip install -e .[test]
 script:
   pytest -s
