--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - "3.7"
   - "3.8"
 install:
-  - pip install -r requirements.txt
-  - pip install -e .[test]
+  - "python -m pip install -r requirements.txt"
+  - "python -m pip install -e .[test]"
 script:
   pytest -s
