add debugging line

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,6 @@ python:
 install:
   - "python -m pip install -r requirements.txt"
   - "python -m pip install -e .[test]"
+  - "traffik process --city berlin"
 script:
   pytest -s
