--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,6 @@ python:
   - "3.8"
 install:
   - "python -m pip install -r requirements.txt"
-  - "python -m pip install -e .[test]"
-  - "traffik process --city berlin"
+  - "python -m pip install --no-cache -e .[test]"
 script:
   pytest -s
