Processing data for use with Graph Nets  (#14)
* Ignore env files, add config

* Add CLI

* Improve version handler

* Add test for CLI

* Install pytest-mock

* Add CI

* Change dirname

* Add a test, use typing

* add print

* verbose tests

* use -e flga

* trying random shit

* Import only command

* add debugging line

* Remove debugging, no-cache

* Add util functions

* Rename, finish city_graph_dataset

* Update requirements

* Remove unused methods

* Use only py3.8

* Remove traffik from requirements

* Make executable

* Add test, val slots

* Correct tests

* Add one more test

* Add type hints, ignore images dir

* Fix broken utils tc2i

* Change type

* Static grid

* Logging - update config

* Add CLI, more logging

* Make intermediate dir

* use data directory

* Run black

* Add typing

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
 h5py==3.1.0
-pytest
+pytest~=6.2.1
 wandb
 boto3
 spotty
 torch-geometric
+python-dotenv~=0.15.0
+click~=7.1.2
+structlog~=20.1.0
+numpy~=1.19.4
+setuptools~=51.0.0
