--- a/.github/workflows/push-to-ecr.yml
+++ b/.github/workflows/push-to-ecr.yml
@@ -14,6 +14,10 @@ jobs:
             create_repo: true
             region: us-east-1
             tags: latest,${{ github.sha }}
-            extra_build_args: --build-arg WANDB_API_KEY=${{ secrets.WANDB_API_KEY }} \
-              --build-arg WANDB_PROJECT=traffik \
-              --build-arg WANDB_USERNAME=${{ secrets.WANDB_USERNAME }}
+            env:
+              WANDB_API_KEY: ${{ secrets.WANDB_API_KEY }}
+              WANDB_PROJECT: traffik
+              WANDB_USERNAME: ${{ secrets.WANDB_USERNAME }}
+            extra_build_args: --build-arg WANDB_API_KEY=env.WANDB_API_KEY \
+              --build-arg WANDB_PROJECT=env.WANDB_PROJECT \
+              --build-arg WANDB_USERNAME=env.WANDB_USERNAME
