--- a/.github/workflows/push-to-ecr.yml
+++ b/.github/workflows/push-to-ecr.yml
@@ -18,6 +18,6 @@ jobs:
             create_repo: true
             region: us-east-1
             tags: latest,${{ github.sha }}
-            extra_build_args: --build-arg WANDB_API_KEY=$WANDB_API_KEY \
+            extra_build_args: '--build-arg WANDB_API_KEY=$WANDB_API_KEY \
               --build-arg WANDB_PROJECT=$WANDB_PROJECT \
-              --build-arg WANDB_USERNAME=$WANDB_USERNAME
+              --build-arg WANDB_USERNAME=$WANDB_USERNAME'
