--- a/.github/workflows/push-to-ecr.yml
+++ b/.github/workflows/push-to-ecr.yml
@@ -3,10 +3,6 @@ on: [push]
 jobs:
     build-and-push:
       runs-on: ubuntu-latest
-      env:
-        WANDB_API_KEY: ${{ secrets.WANDB_API_KEY }}
-        WANDB_PROJECT: traffik
-        WANDB_USERNAME: ${{ secrets.WANDB_USERNAME }}
       steps:
         - uses: actions/checkout@v1
         - uses: bhavika/aws-ecr-action@master
@@ -19,4 +15,4 @@ jobs:
             create_repo: true
             region: us-east-1
             tags: latest,${{ github.sha }}
-            extra_build_args: "--build-arg WANDB_API_KEY=$WANDB_API_KEY --build-arg WANDB_PROJECT=$WANDB_PROJECT --build-arg WANDB_USERNAME=$WANDB_USERNAME"
+            extra_build_args: --build-arg WANDB_API_KEY=${{ secrets.WANDB_API_KEY }} --build-arg WANDB_PROJECT=traffik --build-arg WANDB_USERNAME=${{ secrets.WANDB_USERNAME }}
