--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -5,6 +5,15 @@ ENV AWS_REGION="us-east-1"
 ENV USE_GPU=1
 ENV DEBIAN_FRONTEND=noninteractive
 
+ARG WANDB_API_KEY
+ENV WANDB_API_KEY=$WANDB_API_KEY
+ARG WANDB_PROJECT
+ENV WANDB_PROJECT=$WANDB_PROJECT
+ARG WANDB_USERNAME
+ENV WANDB_USERNAME=$WANDB_USERNAME
+
+ENV WANDB_DISABLE_CODE=false
+
 USER root
 RUN apt update && apt-get install -y build-essential libglib2.0-0
 
