--- a/.github/workflows/push-to-ecr.yml
+++ b/.github/workflows/push-to-ecr.yml
@@ -5,12 +5,14 @@ jobs:
       runs-on: ubuntu-latest
       steps:
         - uses: actions/checkout@v1
-        - uses: kciter/aws-ecr-action@master
+        - uses: bhavika/aws-ecr-action@master
           with:
             access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
             secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
             account_id: ${{ secrets.AWS_ACCOUNT_ID }}
             repo: traffik
+            dockerfile: Dockerfile.gpu
             create_repo: true
             region: us-east-1
             tags: latest,${{ github.sha }}
+            extra_build_args: --build-arg WANDB_API_KEY=${{ secrets.WANDB_API_KEY }} --build-arg WANDB_PROJECT=traffik --build-arg WANDB_USERNAME=${{ secrets.WANDB_USERNAME }}
