--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
-h5py==3.1.0
-pytest~=6.2.1
+h5py
+pytest
 wandb
 boto3
 spotty
 torch-geometric
-python-dotenv~=0.15.0
-click~=7.1.2
-structlog~=20.1.0
-numpy~=1.19.4
-setuptools~=51.0.0
+python-dotenv
+click
+structlog
+numpy
+setuptools
 hiddenlayer
+ipython
 pytorch-lightning
